E-wallet api completed